syntax = "proto3";

package oceandoc.proto;

enum ErrCode {
  Success = 0;
  Fail = 1;

  // 10000
  User_session_error = 10001;
  User_name_error = 10002;
  User_passwd_error = 10003;
  User_exists = 10004;
  User_not_exists = 10005;
  User_disabled = 10006;

  // 11000
  Repo_not_exists = 11000;

  // 12000
  File_permission = 12001;
  File_disk_full = 12002;
  File_dst_is_src_subdir = 12003;
  File_not_exists = 12004;
  File_exists = 12005;
  File_not_dir = 12006;
}
